--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+    
 <!doctype html>
 <html ⚡ lang="id">
     <head>
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <script async src="https://cdn.ampproject.org/v0.js"></script>
         <title>Daftar Situs Slot Terkini Yang Memanjakan Jackpot Untuk Member Baru</title>
+        <meta name="google-site-verification" content="XQ7Ni094oDvXXRuCUsszrCkCYNMc2-_ODYgmMCWm_qQ" />
         <meta name="description" content="Situs slot terkini merupakan pada platform slot online gacor yang menawarkan anda akses ke berbagai permainan slot terbaru dan terupdate yang baru saja dirilis oleh para provider." />
         <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
         <link rel="preconnect dns-prefetch" href="https://fonts.gstatic.com/" crossorigin>
